--- a/html/template.css
+++ b/html/template.css
@@ -1,31 +1,48 @@
-body {
-    display: grid;
-    grid-template-rows: 80px 100px 100px 50px;
-    grid-template-columns: 150px 1fr;
-    font-size: 2em;
+h1 {
+  text-align: center;
+  font-size: 40px;
 }
-header {
-    grid-row: 1;
-    grid-column: 1 / 3;
-    background: #87cefa;
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-auto-rows: 1fr;
+  grid-gap: 0.8em;
+  background-color: #eee;
+  padding: 0.8em;
+  margin: 0 0 2em;
 }
-nav {
-    grid-row: 2;
-    grid-column: 1;
-    background: #ffb6c1;
+
+.grid > .item {
+  background: #ddd;
+  overflow: auto;
+  min-width: 0;
+  padding: 1em;
 }
-#ads {
-    grid-row: 3;
-    grid-column: 1;
-    background: #fff8dc;
+
+.grid > .item > table {
+  width: 100%;
+  border-collapse: collapse;
+  text-align: center;
 }
-article {
-    grid-row: 2 / 4;
-    grid-column: 2;
-    background: #f8f8ff;
+
+th {
+  width: 20%;
+  border: 1px solid #444;
 }
-footer {
-    grid-row: 4;
-    grid-column: 1 / 3;
-    background: #7fffd4;
+
+.id {
+  width: 10%;
+  border: 1px solid #444;
+}
+
+.name {
+  width: 30%;
+  border: 1px solid #444;
+  font-size: 10pt;
+}
+
+.state {
+  width: 60%;
+  border: 1px solid #444;
+  font-size:10pt;
 }
