--- a/html/template.css
+++ b/html/template.css
@@ -9,7 +9,7 @@ h1 {
   grid-gap: 0.6em;
   background-color: #eee;
   padding: 0.2em;
-  margin: 0 0 2em;
+  margin: 10px 0px;
 }
 
 .grid > .item {
@@ -20,11 +20,13 @@ h1 {
 }
 
 .grid > .item > table {
+  width : 100%;
   border-collapse: collapse;
   text-align: center;
 }
 
 th {
+  font-size: 0.8em;
   border: 1px solid #444;
 }
 
@@ -36,11 +38,11 @@ th {
 .name {
   width: 30%;
   border: 1px solid #444;
-  font-size: 10pt;
+  font-size: 0.8em;
 }
 
 .state {
   width: 60%;
   border: 1px solid #444;
-  font-size:10pt;
+  font-size: 0.8em;
 }
