--- a/html/lab_data.css
+++ b/html/lab_data.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   color: #741f05;
 }
@@ -5,6 +10,12 @@ body {
 h1 {
   text-align: center;
   font-size: 40px;
+}
+
+#background {
+  background: #ffeaaa;
+  margin: 0px 10px;
+  padding: 30px 0px;
 }
 
 .lab_container {
