--- a/html/student_data.css
+++ b/html/student_data.css
@@ -14,17 +14,17 @@ h1 {
 
 #background {
   background: #ffeaaa;
-  margin: 0px 10px;
+  margin: 0 5%;
   padding: 30px 0px;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   grid-auto-rows: 1fr;
   grid-gap: 0.6em;
   padding: 0.2em;
-  margin: 10px 10%;
+  margin: 10px 5%;
 }
 
 .grid > .item {
