--- a/html/student_data.css
+++ b/html/student_data.css
@@ -36,10 +36,26 @@ h1 {
   border-radius: 10px;
 }
 
-.name {
+.grid > .item_red {
+  font-size: 14pt;
+  text-align: center;
+  background-color: #741f05;
+  overflow: auto;
+  padding: 0.5em;
+  border-radius: 10px;
+}
+
+.item > .name {
   text-align: left;
   padding: 0 10% 3px;
   font-size: 0.8em;
+}
+
+.item_red > .name {
+  text-align: left;
+  padding: 0 10% 3px;
+  font-size: 0.8em;
+  color: #fff;
 }
 
 .state {
